base/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-handson-backend
  labels:
    app.kubernetes.io/name: dev-handson-backend
    app.kubernetes.io/part-of: dev-handson
spec:
  selector:
    app.kubernetes.io/name: dev-handson-backend
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
